<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu">Menu</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="simple_mode">Simple Mode</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_coma">,</string>
    <string name="cce">C/CE</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="square">x^2</string>
    <string name="toPowOf">x^y</string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="authorDescription"><b>Author</b>: Mateusz Janiak
        \n<b>Index:</b> 224815
        \n<b>University:</b> Lodz University of Technology
        \n<i>Faculty of Electrical, Electronic, Computer and Control Engineering</i>
        \n<b>Programme:</b> Computer Science
        \n<b>Semester:</b> 7
    </string>
    <string name="bracketLeft">(</string>
    <string name="bracketRight">)</string>

</resources>