<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMenu" >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Menu" />

    <Button
        android:id="@+id/simple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonSimple"
        android:rotationX="17"
        android:text="@string/simple" />

    <Button
        android:id="@+id/advanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonAdvanced"
        android:rotationX="17"
        android:text="@string/advanced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonAbout"
        android:rotationX="17"
        android:text="@string/about" />

    <Button
        android:id="@+id/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonExit"
        android:rotationX="17"
        android:text="@string/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>